# This is an automake file for NCL.
# Ed Hartnett 8/30/18

SUBDIRS = areas autograph bivar colconv conpack conran_family		\
conrec_family dashline dashpack error_handling ezmap gflash gks gksC	\
gridall halftone histogram isosurface labelbar ngmisc other plotchar	\
polypack pwrite_family scrolled_title softfill spps streamlines		\
surface tdpack threed vectors wmap
